# mosze-csemege-cpp

./: .gitignore  README.md
01_very_minimal/: CMakeLists.txt
02_testing_example/: CMakeLists.txt  README.md
02_testing_example/design/: geometry.puml
02_testing_example/src/: geometry.cpp
02_testing_example/test/: test_circle.cpp
testing_example/: CMakeLists.txt
testing_example/include/: geometry.h
testing_example/src/: geometry.cpp  main.cpp
testing_example/test/: test_triangle.cpp
very_minimal/: README.md
very_minimal/src/: main.cpp
